--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/style/style.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.css">
+    <link rel="stylesheet" href="bundle.css">
   </head>
   <body>
     <div class="container"></div>
+    <script src="bundle.js" type="text/javascript"></script>
   </body>
-  <script src="/bundle.js"></script>
 </html>
