--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="container"></div>
+    <script src="vendor.js" type="text/javascript"></script>
     <script src="bundle.js" type="text/javascript"></script>
   </body>
 </html>
