--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Sketching Prompt Randomizer</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="bundle.css">
+    <link rel="stylesheet" href="/assets/bundle.css">
   </head>
   <body>
     <div class="container"></div>
-    <script src="vendor.js" type="text/javascript"></script>
-    <script src="bundle.js" type="text/javascript"></script>
+    <script src="/assets/vendor.js" type="text/javascript"></script>
+    <script src="/assets/bundle.js" type="text/javascript"></script>
   </body>
 </html>
