--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Sketching Prompt Randomizer</title>
+    <title>Creative Sketching Prompts</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/assets/bundle.css">
+    <link rel="stylesheet" href="/assets/css/bundle.css">
   </head>
   <body>
     <div class="container"></div>
-    <script src="/assets/vendor.js" type="text/javascript"></script>
-    <script src="/assets/bundle.js" type="text/javascript"></script>
+    <script src="/assets/js/vendor.js" type="text/javascript"></script>
+    <script src="/assets/js/bundle.js" type="text/javascript"></script>
   </body>
 </html>
